# keyboard-recorder

./: Cargo.toml  README.md  keyboard.db
src/: clt.rs  commands.rs  db.rs  key.rs  lib.rs  logging.rs  main.rs
src/commands/: clear.rs  daemon.rs  query.rs  recorder.rs
