[package]
name = "keyboard-recorder"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.100"
device_query = "4.0.1"
rusqlite = "0.37.0"
clap = { version = "4.5.17", features = ["derive"] }
windows-sys = { version = "0.59.0", features = [
	"Win32_Foundation",
	"Win32_System_Threading"
] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
